# openpower-proc-control

./: Makefile.am  README.md  configure.ac  meson.build  meson.options  nmi.service.in  nmi_interface.cpp  nmi_main.cpp  targeting.hpp
extensions/phal/: phal_error.cpp
rbmc-cfam-daemon/: README.md  meson.build
rbmc-cfam-daemon/src/: application.cpp  application.hpp  bmc_cfam.hpp  cfam_access.cpp  cfam_access.hpp  cfam_fields.cpp  cfam_fields.hpp  cfam_main.cpp  cfam_tool.cpp  cfam_types.hpp  cfams_tool.cpp  local_bmc.cpp  local_bmc.hpp  local_cfam.cpp  local_cfam.hpp  meson.build  services.cpp  services.hpp  sibling_bmc.cpp  sibling_bmc.hpp  sibling_cfam.cpp  sibling_cfam.hpp  sysfs.cpp  sysfs.hpp
rbmc-cfam-daemon/test/: cfam_access_test.cpp  cfam_fields_test.cpp  local_cfam_test.cpp  meson.build  mock_sysfs.hpp  services_test.cpp  sibling_cfam_test.cpp  sysfs_test.cpp
service_files/: xyz.openbmc_project.State.BMC.Redundancy.Sibling.service.in
